--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@ div		{padding-top:1%; width:40%; left:30%; position: relative}
 
 
 
-<body><a href="https://www.hostinger.com/cpanel-login?utm_source=fri&utm_medium=www&utm_campaign=fripwr" target="_blank" rel="nofollow"><div style="position: -webkit-sticky;position: sticky;top: 0;z-index: 99999;left: 0;right: 0;margin: 0 auto;text-align: center;background: #6747C7;"><img src="https://user-images.githubusercontent.com/9257291/46002195-0ed1a000-c0b6-11e8-8c9b-8098861e4abc.png" style="width: auto;max-width: 100%;text-align: center;border-radius: 2px;"></div></a>
-
+<body>
 <div style="text-align: center;">
 
 <img src="sowa.jpg" style="width:85%; margin-left: auto;
