Add owl + format code

--- a/index.html
+++ b/index.html
@@ -3,50 +3,58 @@
 <html>
 
 <head>
-
-<title>Visions of Tondal Homepage</title>
-
+    <title>Visions of Tondal Homepage</title>
 </head>
-
 
 
 <style type="text/css">
 
-body	{background-color:#1C1C1C}
+    body {
+        background-color: #1C1C1C
+    }
 
-p		{line-height:2;}
+    p {
+        line-height: 2;
+    }
 
-a		{letter-spacing:4px; font:14px arial; color:#FFFFFF;}
+    a {
+        letter-spacing: 4px;
+        font: 14px arial;
+        color: #FFFFFF;
+    }
 
-div		{padding-top:1%; width:40%; left:30%; position: relative}
+    div {
+        padding-top: 1%;
+        width: 40%;
+        left: 30%;
+        position: relative
+    }
 
 </style>
-
 
 
 <body>
 <div style="text-align: center;">
 
-<img src="sowa.jpg" style="width:85%; margin-left: auto;
+    <img src="img/owl.jpg" style="width:85%; margin-left: auto;
     margin-right: auto"/>
 
-<p align="center">
+    <p align="center">
 
-<a>Listen to us</a> 
-<a href="https://play.spotify.com/artist/10wTK1qP3PoYWUeYnVROPa" target="_blank"> @Spotify</a><br />
+        <a>Listen to us</a>
+        <a href="https://play.spotify.com/artist/10wTK1qP3PoYWUeYnVROPa" target="_blank"> @Spotify</a><br/>
 
-<a> Get our music </a> 
-<a href="http://visionsoftondal.bandcamp.com/" target="_blank">  @bandcamp</a>
+        <a> Get our music </a>
+        <a href="http://visionsoftondal.bandcamp.com/" target="_blank"> @bandcamp</a>
 
-<a href="http://itunes.apple.com/us/artist/visions-of-tondal/id942348055" target="_blank">  @iTunes</a><br />
+        <a href="http://itunes.apple.com/us/artist/visions-of-tondal/id942348055" target="_blank"> @iTunes</a><br/>
 
-<a href="http://www.facebook.com/VisionsOfTondal" target="_blank">facebook</a><br />
+        <a href="http://www.facebook.com/VisionsOfTondal" target="_blank">facebook</a><br/>
+    </p>
 
-<a href="/contact" target="_top">contact</a><br/>
-
-</p>
-
-<iframe width="100%" height="117" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/44862548&amp;color=ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false";></iframe>
+    <iframe width="100%" height="117" scrolling="no" frameborder="no"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/44862548&amp;color=ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"
+            ;></iframe>
 </div>
 
 </body>
